--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cursos - SENAC</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Changa+One&family=Poppins:wght@300;500;700&display=swap"
@@ -19,7 +19,7 @@
         <ul class="lista-botoes">
             <li>Ínicio</li>
             <li>Cursos</li>
-            <li>Contato</li>
+           <a href="contato.html"><li>Contato</li> </a>
             <li>Site Oficial</li>
         </ul>
     </header>
@@ -94,7 +94,7 @@
         Feito por Igor @ 2023.
     </footer>
 <script src="index.js"></script>
-
 </body>
 
 </html>
+
